# gromacs-master

./: .gitignore  README.md  main.py  pyproject.toml  reproduce_script_fix.patch
src/gromacs_agent/core/: config.py  graph.py  state.py
src/gromacs_agent/knowledge/: db.py
src/gromacs_agent/llm/: multi_fixer.py
src/gromacs_agent/mcts/: candidates.py  node.py  search.py
src/gromacs_agent/memory/: knowledge_base.py
src/gromacs_agent/nodes/: diagnoser.py  executor.py  mcts_stage.py  planner.py  replanner.py
src/gromacs_agent/search/: mcts.py
src/gromacs_agent/tools/: gromacs_tools.py
src/gromacs_agent/utils/: command_logger.py  logger.py
tests/: test_agent.py  test_diagnoser.py  test_mcts.py
